--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -39,11 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "24c14476",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6857142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = float(input(\"Enter a floating point number\"))\n",
+    "j = float(input(\"Enter a floating point number\"))\n",
+    "a = i/j\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
