--- a/Day5Class.ipynb
+++ b/Day5Class.ipynb
@@ -8,8 +8,9 @@
    "outputs": [],
    "source": [
     "#List in Python\n",
-    "fruits = [\"apple\", \"orange\", \"banana\", \"coconut\"]\n",
+    "fruits = [\"apple\", \"orange\", \"banana\", \"coconut\", \"banana\"]\n",
     "fruits.sort()\n",
+    "fruits.arrange()\n",
     "print(fruits)"
    ]
   }
